# cppx

./: .gitignore  Buffer.cpp  Buffer.hpp  CMakeLists.txt  Exception.cpp  Exception.hpp  Makefile  README.md
.github/workflows/: cmake.yml
include/: Buffer.hpp  Exception.hpp  cppxBuffer.hpp  cppxException.hpp
src/: Buffer.cpp  Exception.cpp  cppxBuffer.cpp  cppxException.cpp
test/: buffer.cpp  buffer.test.cpp  exception.cpp  exception.test.cpp
